--- a/styles/custom-styles.css
+++ b/styles/custom-styles.css
@@ -2055,7 +2055,7 @@ p.article_main_section_radio.disabled::before {
     text-decoration-line: underline;
 }
 
-.main_login_continue_btn.disabled {
+.main_login_continue_btn {
     background: #44ED9C;
     box-shadow: 0px 20px 40px rgba(68, 237, 156, 0.2);
     border-radius: 36px;
@@ -2066,6 +2066,27 @@ p.article_main_section_radio.disabled::before {
     text-transform: uppercase;
     padding: 20px 40px;
     margin: auto;
+    transition: all ease 0.3s;
+}
+
+.main_login_continue_btn:focus {
+    outline: 0;
+}
+
+.main_login_continue_btn:hover {
+    cursor: pointer;
+    background: #44ED9C;
+    box-shadow: 0px 20px 40px rgba(67, 237, 156, 0.4);
+    transform: scale(1.05);
+}
+
+.main_login_continue_btn:active {
+    background: #3ACA85;
+    box-shadow: 0px 20px 40px rgba(67, 237, 156, 0.4);
+}
+
+.main_login_continue_btn.disabled {
+    background: #CCCCCC;
 }
 
 .main_login_continue_btn.disabled:hover {
@@ -2139,6 +2160,138 @@ p.article_main_section_radio.disabled::before {
     height: 24px;
     position: relative;
     margin-right: 9px;
+}
+
+.main_signup_container > * {
+    transition: all ease 0.3s;
+}
+
+.main_signup_container {
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    max-width: 1250px;
+    display: flex;
+    justify-content: space-between;
+    margin: 90px auto;
+}
+
+.main_signup_container_left {
+    width: 37%;
+}
+
+.main_signup_container_right {
+    width: 63%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 30px;
+}
+
+.main_signup_container_first_line {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.main_signup_container_title {
+    color: #000;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.main_signup_container_signup {
+    color: #4E22D0;
+    text-decoration-line: underline;
+    font-size: 24px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+
+.main_signup_container_signup::before {
+    content: "";
+    background: url(../images/adminpanel/arrowleft453.png);
+    width: 8px;
+    height: 16px;
+    display: block;
+    margin-right: 6px;
+}
+
+.main_signup_container_info {
+    width: 100%;
+    text-align: start;
+}
+
+.main_signup_container_input_container {
+    width: 100%;
+    display: flex;
+    position: relative;
+    max-width: 460px;
+    align-items: center;
+}
+
+.main_signup_container_input_container.error > .main_signup_container_input_email:focus {
+    border: 1px solid #F03836;
+}
+
+.main_signup_container_input_container.error > .main_signup_container_input_email::placeholder {
+    color: #F03836;
+}
+
+.main_signup_container_input_container.error::after {
+    content: "";
+    display: block;
+    background: url(../images/adminpanel/error_warning0921.png);
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    right: 20px;
+}
+
+.main_signup_container_input_email {
+    width: 100%;
+    max-width: 460px;
+    background: #F3F3F3;
+    border-radius: 25px;
+    outline: 0;
+    border: 0;
+    padding: 14px 19px;
+}
+
+.main_signup_container_input_email:focus {
+    border: 1px solid #4E22D0;
+    border-radius: 25px;
+}
+
+.main_signup_error_info {
+    display: none;
+    margin-top: 10px;
+    font-size: 12px;
+    color: #F03836;
+    max-width: 440px;
+    margin-bottom: 0;
+}
+
+.main_signup_error_info a {
+    color: #4E22D0;
+    font-size: 12px;
+    text-decoration-line: underline;
+}
+
+.main_signup_container_input_container.error ~ .main_signup_error_info {
+    display: block;
+}
+
+.main_signup_container_agree {
+    width: 100%;
+    text-align: start;
+    margin-top: 20px;
+}
+
+.main_signup_container_agree a {
+    color: #4E22D0;
+    font-size: 14px;
+    text-decoration-line: underline;
 }
 
 /* End admin pages */
