--- a/styles/custom-styles.css
+++ b/styles/custom-styles.css
@@ -1922,8 +1922,43 @@ p.article_main_section_radio.disabled::before {
 
 /* Admin pages */
 
-.header-admin .header-line img {
+.logged .header-line {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logged .header-line .header-line_user {
+    margin-right: 100px;
+    display: flex;
+    align-items: center;
+}
+
+.header-admin .header-line > a > img {
     margin: 19px 40px;
+}
+
+.logged .header-line_user_img {
+    margin-right: 7px;
+}
+
+.logged .header-line .header-line_user .header-line_user_login {
+    font-size: 18px;
+    color: #000000;
+}
+
+.logged .header-line .header-line_user:hover {
+    cursor: pointer;
+}
+
+body.logged {
+    background: #F3F7FF;
+}
+
+.logged .header-admin {
+    background: #FFFFFF;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 40px;
 }
 
 .main_login_container {
@@ -2334,6 +2369,75 @@ p.article_main_section_radio.disabled::before {
     font-size: 14px;
 }
 
+.main_page_first_line {
+    max-width: 1250px;
+    margin: auto;
+}
+
+.main_page_menu {
+    max-width: 1250px;
+    margin: auto;
+}
+
+.main_page_first_line_title {
+    font-weight: bold;
+    font-size: 46px;
+    color: #000000;
+    margin-bottom: 20px;
+}
+
+.main_page_first_line_text {
+    font-size: 20px;
+    color: #000000;
+}
+
+.main_page_menu_items {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 90px;
+    padding: 0;
+}
+
+.main_page_menu_item {
+    flex-basis: 49%;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    background: #FFFFFF;
+    padding: 49px 25px;
+    display: flex;
+    transition: all ease 0.3s;
+    height: auto;
+}
+
+.main_page_menu_item:hover {
+    box-shadow: 0px 7.35269px 36.7634px 0.735269px #CAC8D5;
+    border-radius: 10px;
+}
+
+.main_page_menu_item_img {
+    margin-right: 50px;
+}
+
+.main_page_menu_item_container_link {
+    font-weight: bold;
+    font-size: 24px;
+    color: #000000;
+}
+
+.main_page_menu_item_container_link:hover {
+    color: #4E22D0;
+    text-decoration-line: underline;
+}
+
+.main_page_menu_item_container_info {
+    font-size: 20px;
+    color: #000000;
+    margin-bottom: 0;
+}
+
 /* End admin pages */
 
 @media (min-width: 1580px) {
@@ -2376,6 +2480,20 @@ p.article_main_section_radio.disabled::before {
     .main_admin {
         display: flex;
         justify-content: center;
+    }
+
+    .logged .main_admin {
+        flex-wrap: wrap;
+    }
+
+    .main_page_menu_items {
+        justify-content: center;
+    }
+
+    .main_page_menu_item {
+        flex-direction: column;
+        align-items: flex-start;
+        flex-basis: 40%;
     }
 
     .main_login_container {
@@ -2591,6 +2709,10 @@ p.article_main_section_radio.disabled::before {
         gap: 20px;
     }
 
+    .main_page_menu_item {
+        flex-basis: 45%;
+    }
+
 }
 
 @media (max-width: 700px) {
@@ -2706,6 +2828,17 @@ p.article_main_section_radio.disabled::before {
     .blog_articles_menu_item + .blog_articles_menu_item {
         border-left: 0;
     }
+
+    .main_page_menu_items {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main_page_menu_item {
+        flex-basis: 90%;
+        width: 90%;
+        flex-direction: row;
+    }
 }
 
 @media (max-width: 500px) {
@@ -2804,6 +2937,14 @@ p.article_main_section_radio.disabled::before {
         top: auto;
     }
 
+    .main_page_menu_item {
+        justify-content: center;
+    }
+
+    .main_page_menu_item {
+        flex-direction: column;
+    }
+
     .buy_main_choose_available {
         flex-wrap: wrap;
     }
@@ -2820,6 +2961,25 @@ p.article_main_section_radio.disabled::before {
     
     .header_first_line_lang {
         right: 120px;
+    }
+    
+    .logged .header-line {
+        flex-direction: column;
+    }
+
+    .logged .header-line .header-line_user {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
+    .main_page_first_line {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main_page_first_line_text {
+        text-align: center;
     }
 }
 
