Main products list init

--- a/styles/custom-styles.css
+++ b/styles/custom-styles.css
@@ -2467,6 +2467,186 @@ body.logged {
     font-size: 18px;
     padding: 20px 40px;
     font-weight: 700;
+    transition: all ease 0.3s;
+}
+
+.main_page_product_empty_btn:hover {
+    background: #44ED9C;
+    box-shadow: 0px 20px 40px rgba(67, 237, 156, 0.4);
+    transform: scale(1.1);
+}
+
+.main_page_product_empty_btn:focus {
+    outline: none;
+}
+
+.main_page_product_empty_btn:active {
+    background: #3ACA85;
+    box-shadow: 0px 20px 40px rgba(67, 237, 156, 0.4);
+}
+
+.main_page_product_list {
+    max-width: 1250px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    margin-bottom: 90px;
+}
+
+.main_page_product_list_header {
+    display: flex;
+    background: #10147C;
+    border-radius: 10px 10px 0px 0px;
+    width: 100%;
+    padding: 18px 0px;
+}
+
+.main_page_product_list_header_item {
+    color: #FFFFFF;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+/* Rows for product list */
+.main_page_product_list_header_item.product,
+.main_page_product_list_container_item.product {
+    flex-basis: 35%;
+    padding-left: 90px;
+}
+
+.main_page_product_list_header_item.devices,
+.main_page_product_list_container_item.devices {
+    flex-basis: 15%;
+    text-align: center;
+}
+
+.main_page_product_list_header_item.validity,
+.main_page_product_list_container_item.validity {
+    flex-basis: 35%;
+    text-align: center;
+}
+
+.
+
+.main_page_product_list_header_item.price,
+.main_page_product_list_header_item.price {
+    flex-basis: 15%;
+    text-align: center;
+}
+
+.main_page_product_list_main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main_page_product_list_container {
+    display: flex;
+    align-items: center;
+    width: 90%;
+    height: 70px;
+    padding-top: 10px;
+}
+
+.main_page_product_list_container + .main_page_product_list_container {
+    border-top: 1px solid #EEEEEE;
+}
+
+.product_list_item_name {
+    color: #10147C;
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 0;
+}
+
+.product_list_item_name:hover {
+    cursor: pointer;
+}
+
+.main_page_product_list_container_item.product {
+    display: flex;
+    align-items: center;
+}
+
+.main_page_product_list_container_item.devices {
+    color: #2A3145;
+    font-size: 18px;
+}
+
+.main_page_product_list_container_item.validity {
+    color: #2A3145;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.main_page_product_list_container_item.price {
+    color: #4E22D0;
+    font-size: 36px;
+    font-weight: 600;
+    display: flex;
+    align-items: flex-start;
+    line-height: 1;
+}
+
+.main_page_product_list_container_item.price .currency {
+    font-size: 24px;
+    margin-right: 2px;
+}
+
+.product_list_item_checkbox {
+    margin-bottom: 5px;
+    margin-left: -33px;
+    margin-right: 20px;
+}
+
+.product_list_item_checkbox:hover {
+    cursor: pointer;
+}
+
+.main_page_product_list_footer_btn {
+    color: #10147C;
+    border-radius: 36px;
+    font-weight: bold;
+    padding: 20px 40px;
+    text-transform: uppercase;
+    font-size: 18px;
+    background: #44ED9C;
+    box-shadow: 0px 20px 40px rgba(68, 237, 156, 0.2);
+    transition: all ease 0.3s;
+}
+
+.main_page_product_list_footer_btn:focus {
+    outline: none;
+}
+
+.main_page_product_list_footer_btn:not(.disabled):hover {
+    cursor: pointer;
+    background: #44ED9C;
+    box-shadow: 0px 20px 40px rgba(67, 237, 156, 0.4);
+    transform: scale(1.1);
+}
+
+.main_page_product_list_footer_btn:not(.disabled):active {
+    background: #3ACA85;
+    box-shadow: 0px 20px 40px rgba(67, 237, 156, 0.4);
+}
+
+.main_page_product_list_footer_btn.disabled {
+    background: #CCCCCC;
+    box-shadow: none;
+}
+
+.main_page_product_list_footer {
+    margin: 50px 0;
+}
+
+.main_page_product_list_footer_btn.disabled:hover {
+    cursor: not-allowed;
 }
 
 /* End admin pages */
@@ -2665,6 +2845,15 @@ body.logged {
     .main_signup_container_right {
         width: 100%;
     }
+    
+    .main_page_product_list {
+        width: 95%;
+    }
+
+    .main_page_product_list_header_item.product,
+    .main_page_product_list_container_item.product {
+        padding-left: 50px;
+    }
 }
 
 @media (max-width: 910px) {
@@ -2712,6 +2901,24 @@ body.logged {
 
     .blog_articles_items {
         padding: 0 50px;
+    }
+
+    .main_page_product_list_container {
+        width: 95%;
+        height: max-content;
+    }
+
+    .main_page_product_list_container_item.validity {
+        overflow-wrap: break-word;
+    }
+
+    .main_page_product_list_header_item.validity,
+    .main_page_product_list_container_item.validity {
+        flex-basis: 25%;
+    }
+
+    .product_list_item_name {
+        margin: 15px 0;
     }
 }
 
@@ -2869,6 +3076,27 @@ body.logged {
         flex-basis: 90%;
         width: 90%;
         flex-direction: row;
+    }
+
+    .main_page_product_list_header_item.devices,
+    .main_page_product_list_container_item.devices,
+    .main_page_product_list_header_item.validity,
+    .main_page_product_list_container_item.validity {
+        display: none;
+    }
+    
+    .main_page_product_list_header_item.product,
+    .main_page_product_list_container_item.product,
+    .main_page_product_list_header_item.price,
+    .main_page_product_list_container_item.price {
+        flex-basis: 49%;
+        width: 49%;
+    }
+
+    .main_page_product_list_header_item.price,
+    .main_page_product_list_container_item.price {
+        display: flex;
+        justify-content: center;
     }
 }
 
