--- a/styles/custom-styles.css
+++ b/styles/custom-styles.css
@@ -471,9 +471,6 @@ body.hidden_scrollbar::-webkit-scrollbar {
     background: #FFFFFF;
     max-width: 1100px;
     width: 80%;
-    border: 1px solid #EEEEEE;
-    box-sizing: border-box;
-    box-shadow: 5px 40px 60px rgb(0 0 0 / 15%);
     overflow-y: hidden;
 }
 
@@ -2892,6 +2889,82 @@ body.logged {
 
 .admin_modal .modal-footer .delete_account:hover {
     transform: scale(1.1);
+}
+
+.main_admin_questions_items {
+    background: #FFFFFF;
+    max-width: 100%;
+    overflow-y: hidden;
+    width: 100%;
+}
+
+.main_admin_questions_item {
+    border-top: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+    position: relative;
+    height: 99px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: #fff;
+    z-index: 9;
+}
+
+.main_admin_questions_question {
+    color: #10147C;
+    font-size: 24px;
+    line-height: 29px;
+    padding: 35px 60px;
+    position: relative;
+    z-index: 9;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0;
+    font-weight: 700;
+}
+
+.main_admin_questions_question::after {
+    content: "";
+    background: url(../images/plus.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 20px;
+    border: 1px solid #4E22D0;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 30px;
+}
+
+.main_admin_questions_answer {
+    margin: 0;
+    padding: 35px 60px;
+    position: relative;
+    z-index: 1;
+}
+
+.main_admin_questions_chapter_header_text {
+    background: #10147C;
+    box-sizing: border-box;
+    margin-bottom: 0;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size: 24px;
+    padding: 35px 60px;
+}
+
+.main_admin_questions_chapter {
+    border: 1px solid #EEEEEE;
+    box-sizing: border-box;
+    box-shadow: 5px 40px 60px rgb(0 0 0 / 15%);
+}
+
+.main_admin_questions_container {
+    max-width: 1250px;
+    margin: auto;
+    padding-bottom: 90px;
 }
 
 /* End admin pages */
