--- a/styles/custom-styles.css
+++ b/styles/custom-styles.css
@@ -2949,6 +2949,7 @@ body.logged {
     display: flex;
     align-items: center;
     margin-bottom: 0;
+    cursor: pointer;
 }
 
 .main_admin_questions_question:hover::after {
@@ -2956,6 +2957,10 @@ body.logged {
     background-color: #4E22D0;
     box-shadow: 0px 20px 30px rgba(78, 34, 208, 0.3);
     transition: all ease 0.3s;
+}
+
+.main_admin_questions_question.active {
+    box-shadow: 5px 40px 60px rgba(0, 0, 0, 0.05);
 }
 
 .main_admin_questions_question.active::after {
@@ -2970,6 +2975,9 @@ body.logged {
     padding: 35px 60px;
     position: relative;
     z-index: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .main_admin_questions_chapter_header_text {
@@ -2995,6 +3003,34 @@ body.logged {
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+
+.main_admin_questions_answer_btn {
+    background: #44ED9C;
+    box-shadow: 0px 20px 40px rgba(68, 237, 156, 0.2);
+    border-radius: 36px;
+    color: #10147C;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 18px;
+    padding: 20px 40px;
+    font-weight: 700;
+    width: max-content;
+}
+
+/* .marker {
+    display: flex;
+    align-items: baseline;
+} */
+
+.marker::before {
+    content: "•";
+    margin-right: 10px;
+}
+
+.method {
+    display: flex;
+    gap: 34px;
 }
 
 /* End admin pages */
@@ -3601,6 +3637,22 @@ body.logged {
 
     .admin_modal .modal-content {
         padding: 20px 20px;
+    }
+
+    .main_admin_questions_question::after {
+        padding: 14px;
+    }
+
+    .main_admin_questions_question {
+        font-size: 18px;
+    }
+
+    .main_admin_questions_question > span {
+        width: 95%;
+    }
+    
+    .main_admin_questions_question:hover {
+        font-size: 18px;
     }
 }
 
