--- a/styles/custom-styles.css
+++ b/styles/custom-styles.css
@@ -2509,9 +2509,33 @@ body.logged {
 }
 
 /* Rows for product list */
+.main_page_product_list_container_item.product {
+    position: relative;
+}
+
+.main_page_product_list_container_item.product::after {
+    content: "";
+    background: url(../images/adminpanel/arrowdownblue839.png);
+    background-size: 100% 100%;
+    /* margin-left: 10px; */
+    width: 12px;
+    height: 6px;
+    margin-left: -20px;
+    z-index: 1;
+    transition: all ease 0.3s;
+}
+
+.checked .main_page_product_list_container_item.product::after {
+    transform: rotate(180deg);
+}
+
+.main_page_product_list_container_item.product:hover::after {
+    cursor: pointer;
+}
+
 .main_page_product_list_header_item.product,
 .main_page_product_list_container_item.product {
-    flex-basis: 20%;
+    flex-basis: 21%;
     padding-left: 30px;
 }
 
@@ -2563,6 +2587,8 @@ body.logged {
     font-weight: bold;
     font-size: 24px;
     margin-bottom: 0;
+    padding-right: 30px;
+    z-index: 9;
 }
 
 .product_list_item_name:hover {
@@ -3041,6 +3067,20 @@ body.logged {
 .method {
     display: flex;
     gap: 34px;
+}
+
+.key_container {
+    display: flex;
+    gap: 10px;
+    font-size: 18px;
+    color: #000;
+    margin-bottom: 10px;
+    margin: auto;
+    width: 90%;
+}
+
+.key_title {
+    font-weight: bold;
 }
 
 /* End admin pages */
